--- a/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/native-image.properties
+++ b/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/native-image.properties
@@ -1,1 +1,2 @@
 Args = --no-fallback --allow-incomplete-classpath --report-unsupported-elements-at-runtime -H:+ReportExceptionStackTraces
+ImageName = main
