--- a/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/resource-config.json
+++ b/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/resource-config.json
@@ -1,7 +1,9 @@
 {
   "resources":[
     {"pattern":"\\Q.version\\E"},
-    {"pattern":"\\Qgit.properties\\E"}
+    {"pattern":"\\Qlog4j2.xml\\E"},
+    {"pattern":"\\Qgit.properties\\E"},
+    {"pattern":"\\Qredis-rdb-cli.conf\\E"}
   ],
   "bundles":[]
 }
