--- a/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/reflect-config.json
@@ -1,2 +1,9 @@
 [
+  {
+    "name": "com.moilioncircle.redis.replicator.RedisSocketReplicator",
+    "fields": [
+      { "name": "host"},
+      { "name": "port"}
+    ]
+  }
 ]
