--- a/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/resource-config.json
+++ b/src/main/resources/META-INF/native-image/com.moilioncircle/redis-rdb-cli/resource-config.json
@@ -3,7 +3,9 @@
     {"pattern":"\\Q.version\\E"},
     {"pattern":"\\Qlog4j2.xml\\E"},
     {"pattern":"\\Qgit.properties\\E"},
-    {"pattern":"\\Qredis-rdb-cli.conf\\E"}
+    {"pattern":"\\Qredis-rdb-cli.conf\\E"},
+    {"pattern":"\\QMETA-INF/services/com.moilioncircle.redis.sink.api.SinkService\\E"},
+    {"pattern":"\\QMETA-INF/services/com.moilioncircle.redis.sink.api.ParserService\\E"}
   ],
   "bundles":[]
 }
