--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <distributionManagement>
+      <repository>
+        <id>github</id>
+        <name>GitHub OWNER Apache Maven Packages</name>
+        <url>https://maven.pkg.github.com/billcrook/redis-rdb-cli</url>
+      </repository>
+    </distributionManagement>
+    
     <dependencies>
         <dependency>
             <groupId>com.moilioncircle</groupId>
